# clipdeck---Linux-Clipping-CLI

./: .gitignore  CMakeLists.txt
scripts/: stress_recorder.sh
src/: core.cpp  core.hpp  feedback_notifier.cpp  feedback_notifier.hpp  save_request_controller.cpp  save_request_controller.hpp
src/commands/: commands.cpp  commands.hpp
src/listener/: daemon_listener.cpp  daemon_listener.hpp  keybind_capture.cpp
src/recorder/: clip_muxer.cpp  clip_muxer.hpp  gstreamer_recorder.cpp  gstreamer_recorder.hpp  media_probe.cpp  media_probe.hpp  recorder_backend.cpp  recorder_backend.hpp  recorder_setup.cpp  segment_file.cpp  segment_file.hpp
src/settings/: settings_store.cpp  settings_store.hpp
src/tests/: clip_muxer_test.cpp  daemon_listener_test.cpp  feedback_notifier_test.cpp  gstreamer_recorder_test.cpp  keybind_test.cpp  recorder_backend_test.cpp  runtime_paths_test.cpp  save_request_controller_test.cpp  settings_store_test.cpp
src/utils/: runtime_paths.cpp  runtime_paths.hpp
